# SittingDucks_Patcher

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  data.py  patcher.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: python_tests.yml
duckpatch/: data.py  patcher.py
duckpatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: generate_regression_hashes.py  test_patcher.py  tests.py
test/hashes/: EU.json  PO.json  RU.json  US04.json  US05.json
